WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
135363
REGRESSION(168376): Standalone images pasted to Outlook 2011 don't display
https://bugs.webkit.org/show_bug.cgi?id=135363
Summary
REGRESSION(168376): Standalone images pasted to Outlook 2011 don't display
Brady Eidson
Reported
2014-07-28 16:00:42 PDT
Standalone images pasted to Outlook 2011 don't display. Almost certainly them relying particular timing from a loading delegate. The optimization added in 168376 is no longer needed, so we should just roll out the patch instead of spending resources exploring much further. <
rdar://problem/17768371
>
Attachments
Patch v1
(5.37 KB, patch)
2014-07-28 16:03 PDT
,
Brady Eidson
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2014-07-28 16:03:34 PDT
Created
attachment 235628
[details]
Patch v1
Brady Eidson
Comment 2
2014-07-28 16:14:34 PDT
http://trac.webkit.org/changeset/171708
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug