REGRESSION(168376): Standalone images pasted to Outlook 2011 don't display <rdar://problem/17768371> and https://bugs.webkit.org/show_bug.cgi?id=135363

Reviewed by Tim Horton.

Outlook isn’t prepared to handle the resource load callbacks when sent synchronously.

r168376 was an optimization that we no longer need, so the simplest fix is to roll it out.

* editing/mac/EditorMac.mm:
(WebCore::Editor::WebContentReader::readImage):

* loader/archive/ArchiveResource.cpp:
(WebCore::ArchiveResource::ArchiveResource):
* loader/archive/ArchiveResource.h:
(WebCore::ArchiveResource::setShouldLoadImmediately): Deleted.
(WebCore::ArchiveResource::shouldLoadImmediately): Deleted.

* loader/cache/CachedResourceLoader.cpp:
(WebCore::CachedResourceLoader::requestResource):

Canonical link: https://commits.webkit.org/153255@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@171708 268f45cc-cd09-0410-ab3c-d52691b4dbfc