Source/WebCore/editing/mac/EditorMac.mm
@@ -583,10 +583,7 @@ bool Editor::WebContentReader::readImage(PassRefPtr<SharedBuffer> buffer, const 
     typeAsFilenameWithExtension.replace('/', '.');
     URL imageURL = URL::fakeURLWithRelativePart(typeAsFilenameWithExtension);
 
-    RefPtr<ArchiveResource> archiveResource = ArchiveResource::create(buffer, imageURL, type, emptyString(), emptyString());
-    archiveResource->setShouldLoadImmediately(true);
-
-    fragment = frame.editor().createFragmentForImageResourceAndAddResource(archiveResource.release());
+    fragment = frame.editor().createFragmentForImageResourceAndAddResource(ArchiveResource::create(buffer, imageURL, type, emptyString(), emptyString()));
     return fragment;
 }
 
